feat(core): finalize virtual-thread kernel and classic-survival integrations